--- a/scss/partials/_page.scss
+++ b/scss/partials/_page.scss
@@ -42,3 +42,7 @@ h1{
         }
     }
 }
+
+.active{
+   color: getColor(mypink) !important;
+}
